--- a/sniffer-m3u8.2
+++ b/sniffer-m3u8.2
@@ -7,6 +7,12 @@
   let episodeClickCounter = 0;
   let lastClickedEpisode = null;
 
+  // Settings untuk auto close
+  const AUTO_CLOSE_SETTINGS = {
+    enabled: true, // Default enable auto close
+    delay: 2000 // 2 detik setelah export
+  };
+
   function extractEpisodeFromURL(url) {
     // Pertama coba ekstrak dari URL seperti sebelumnya
     const match = url.match(/_(\d{1,3})\//);
@@ -88,6 +94,52 @@
     return origOpen.call(this, method, url, ...rest);
   };
 
+  // ---------- FITUR AUTO CLOSE ----------
+  window.toggleAutoClose = function() {
+    AUTO_CLOSE_SETTINGS.enabled = !AUTO_CLOSE_SETTINGS.enabled;
+    updateAutoCloseButton();
+    toastInfo(`Auto Close ${AUTO_CLOSE_SETTINGS.enabled ? 'diaktifkan' : 'dinonaktifkan'}`, 1500);
+  };
+
+  function updateAutoCloseButton() {
+    const stickyToast = document.getElementById("m3u8-sticky-export");
+    if (!stickyToast) return;
+    
+    let autoCloseBtn = stickyToast.querySelector(".auto-close-btn");
+    if (!autoCloseBtn) {
+      autoCloseBtn = document.createElement("button");
+      autoCloseBtn.className = "auto-close-btn";
+      autoCloseBtn.style.cssText = `
+        background: #444; 
+        color: #fff; 
+        border: none; 
+        padding: 2px 6px; 
+        margin-left: 5px; 
+        border-radius: 4px; 
+        cursor: pointer; 
+        font-size: 11px;
+        border: 1px solid #666;
+      `;
+      autoCloseBtn.title = "Toggle Auto Close setelah export";
+      stickyToast.querySelector("div").appendChild(autoCloseBtn);
+    }
+    
+    autoCloseBtn.textContent = AUTO_CLOSE_SETTINGS.enabled ? "🔴 Auto" : "⚪ Auto";
+    autoCloseBtn.style.background = AUTO_CLOSE_SETTINGS.enabled ? "#e74c3c" : "#444";
+  }
+
+  function closeAllToasts() {
+    const container = document.getElementById("m3u8-toast-container");
+    if (!container) return;
+    
+    const toasts = container.querySelectorAll('div:not(#m3u8-sticky-export)');
+    toasts.forEach(toast => {
+      toast.style.transition = "opacity 0.5s";
+      toast.style.opacity = "0";
+      setTimeout(() => toast.remove(), 500);
+    });
+  }
+
   // ---------- EXPORT ALL ----------
   window.exportM3U8JSON = function () {
     if (!window.m3u8Store.length) {
@@ -128,6 +180,14 @@
       : `✅ Data diexport ke ${filename} (semua data sudah pernah diexport)`;
     
     toastSuccess(toastMsg, 3000);
+
+    // Auto close semua toast setelah export jika enabled
+    if (AUTO_CLOSE_SETTINGS.enabled) {
+      setTimeout(() => {
+        closeAllToasts();
+        console.log("%c[Auto Close] Semua toast ditutup setelah export", "color: cyan;");
+      }, AUTO_CLOSE_SETTINGS.delay);
+    }
   };
 
   // ---------- FITUR BARU: LIHAT DATA & CLEAR DATA ----------
@@ -319,6 +379,8 @@
     toast.appendChild(btnRow);
     container.appendChild(toast);
     
+    // Tambahkan tombol auto close
+    updateAutoCloseButton();
     updateDataCount();
   })();
 
@@ -359,4 +421,5 @@
   };
 
   console.log("%c[OK] M3U8 Sniffer aktif. Semua URL akan dicatat di window.m3u8Store", "color: orange;");
+  console.log("%c[Auto Close] Fitur auto close aktif (🔴)", "color: cyan;");
 })();
